# wetter

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
mysite/: settings.py  urls.py
wetter/: apps.py  urls.py  views.py
wetter/data/: filelist.txt  monattage.json  plz.json  stations.json
wetter/lib/: dwd.py
wetter/static/wetter/css/: wetter.css
wetter/static/wetter/js/: wetter.js
wetter/templates/wetter/: .index.html.swp  base.html  daten.html  index.html  index.html~  jahreswerte.html
wetter/templates/wetter2/: footer.html  xdaten.html
