[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
pandas = "^1.1.1"
geopy = "^2.0.0"
django-pandas = "^0.6.2"
psycopg2-binary = "^2.8.5"
[tool.poetry.dev-dependencies]
